feat :art: : set font size and padding on inputs

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,11 +10,15 @@
     flex-direction: column;
     padding: 2em;
     span {
-        text-align: left;
+        text-align: center;
+        font-size: 20px;
     }
     input {
         height: 40px;
         margin: 10px 0px;
+        text-align: center;
+        padding: 0 10px;
+        font-size: 18px;
     }
 }
 
