--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,29 @@
     text-align: center;
 }
 
+
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+/* Firefox */
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 .card {
     display: flex;
     flex-direction: column;
     padding: 2em;
+    p {
+        font-size: 24px;
+    }
     span {
         text-align: center;
         font-size: 20px;
